--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 /* Reset */
 
 * {
@@ -12,56 +14,53 @@ html,
 body {
  margin: 0;
  padding: 0;
- font-family: 'Open Sans', sans-serif;
+ font-family: 'Bitter', sans-serif;
 }
 
 /* Typography */
 
 a {
-  color:#382e48;
+  color:$blue;
   text-decoration: underline;
   font-weight: bold;
 }
 
     .dark a {
-      color:#ffd586;
+      color:$blue-light;
     }
 
 h1 { 
  font-size: 3.051rem; 
  line-height: 3.051rem;
- font-family: 'Montserrat', sans-serif;
- font-weight:normal;
+ font-family: 'Bitter', sans-serif;
+ font-weight:700;
  margin-bottom: 2rem;
  padding:0.5rem 0;
 }
 
-h1.hyper-bold {
-  text-align: center;
-  font-size: 6.12rem; 
-  line-height: 6.12rem;
-  margin:0;
-  padding:0;
-}
+    h1.hyper-bold {
+      text-align: center;
+      font-size: 4.12rem; 
+      line-height: 4.12rem;
+      margin:0 0 2rem;
+      padding:0;
+      color:$blue;
 
-h1.general-bold {
-  font-weight: bold;
-  margin:0 0 1rem;
-  z-index: 200;
-  animation: animatedBackground 5s ease-in-out infinite;
-  animation: fadeIn 0.5s ease-in-out;
-  animation-delay: 0s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: 1;
-  background-image: linear-gradient(120deg, #0A00F1 0%, rgb(84, 38, 107) 30%);
-  background-clip: text;
-  color: transparent;
-  -webkit-text-fill-color: transparent;
-}
+      @media screen and (max-width: 768px) {
+        font-size: 3.051rem; 
+        line-height: 3.051rem;
+        
+      }
+    }
 
-.dark h1.general-bold {
-  background-image: linear-gradient(120deg, #6f6afb 0%, rgb(255,255,255) 30%);
-}
+    .dark h1.hyper-bold {
+      color:$blue-light;
+    }
+
+    h1.general-bold {
+      font-weight: bold;
+      margin:0 0 1rem;
+    }
 
 @keyframes fadeIn {
   0% {
@@ -74,7 +73,7 @@ h1.general-bold {
 
 h2 { 
  font-size: 2.441rem; 
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Bitter', sans-serif;
  margin-top:4rem;
  margin-bottom:1rem;
  font-weight:normal;
@@ -82,7 +81,7 @@ h2 {
 
 h3 { 
  font-size: 1.953rem; 
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Bitter', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
  font-weight:normal;
@@ -90,7 +89,7 @@ h3 {
 
 h4 { 
  font-size: 1.562rem; 
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Bitter', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
  font-weight:normal;
@@ -98,7 +97,7 @@ h4 {
 
 h5 { 
  font-size: 1.25rem; 
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Bitter', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
  font-weight:normal;
@@ -163,6 +162,24 @@ p > strong {
     right: -0.25rem;
   }
 }
+
+.generic-title {
+  width:100%;
+  border-bottom: 1px solid rgba(0,0,0,.2);
+  font-family: 'Noto Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  text-transform: uppercase;
+  color: $black;
+  padding: 0 0 $spacing-sm 0;
+}
+
+    .generic-title.blue,
+    .dark .generic-title {
+      color: $white;
+      border-bottom: 1px solid rgba(255,255,255,.6);
+    }
 
 /* Layout */
 
@@ -562,10 +579,6 @@ img.in-article {
 
     .dark .product-logo {
       mix-blend-mode: lighten;
-    }
-
-    .dark .product-logo.invert {
-      filter:invert();
     }
 
     .product-content h2,
