More homepage updates

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,9 +1,9 @@
 /* Colors */
 $blue: #0000F8;
-$blue-light: #4747fb;
+$blue-light: rgb(138, 138, 255);
 $gray-dark: #3B3845;
-$gray-md: #909090;
-$gray-light: #F5F1F6;
+$gray-md: #9090a4;
+$gray-light: #c2c2e3;
 $black: #16151A;
 $white: #F5F1F6;
 
