--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,7 @@
   padding: 0px;
   box-sizing:border-box;
   -webkit-tap-highlight-color: transparent;
-  transition: all 0.08s;
+  transition: color, background-color 0.28s;
 }
 
 html, 
