Yay, I got it to work

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -4,7 +4,7 @@ $blue-light: rgb(138, 138, 255);
 $gray-dark: #3B3845;
 $gray-md: #9090a4;
 $gray-light: #c2c2e3;
-$black: #16151A;
+$black: #0d0d24;
 $white: #F5F1F6;
 
 /* Fonts */
