--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -9,6 +9,7 @@ $white: #F5F1F6;
 
 /* Fonts */
 $font-family-main: 'Roboto Condensed', sans-serif;
+$font-family-secondary: 'Roboto', sans-serif;
 $font-size-base: 1rem;
 $font-size-sm: 0.875rem;
 $font-size-md: 1.25rem;
