--- a/assets/main.scss
+++ b/assets/main.scss
@@ -93,6 +93,7 @@ h4 {
  margin-top:2rem;
  margin-bottom:1rem;
  font-weight:normal;
+ line-height: $spacing-md;
 }
 
 h5 { 
@@ -101,12 +102,14 @@ h5 {
  margin-top:2rem;
  margin-bottom:1rem;
  font-weight:normal;
+ line-height: $spacing-md;
 }
 
 p { 
  font-size: 1rem; 
- font-family: 'Open Sans', sans-serif;
- margin-bottom:1rem;
+ font-family: $font-family-secondary, sans-serif;
+ line-height: $spacing-md;
+ margin-bottom: 1rem;
 }
 
 small { 
@@ -161,33 +164,6 @@ p > strong {
     left: -0.25rem;
     right: -0.25rem;
   }
-}
-
-.generic-title {
-  width:100%;
-  border-bottom: 1px solid rgba(0,0,0,.2);
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 10px;
-  text-transform: uppercase;
-  color: $black;
-  padding: 0 0 $spacing-sm 0;
-}
-
-    .generic-title.blue,
-    .dark .generic-title {
-      color: $white;
-      border-bottom: 1px solid rgba(255,255,255,.6);
-    }
-
-.tiny-sub-title {
-  font-size: 1.25rem; 
-  font-family: $font-family-main, sans-serif;
-  margin-top:2rem;
-  margin-bottom:1rem;
-  font-weight:normal;
-  opacity: 0.5;
 }
 
 /* Layout */
@@ -277,22 +253,9 @@ input {
         }
 
         .article-extras .posts a {
-          font-size:0.8rem;
           margin-left:0px;
-          padding:1rem 0rem 0 1rem;
+          padding-top:$spacing-xs;
           position: relative;
-        }
-
-        .article-extras .posts a::before {
-          content: '';
-          display: block;
-          width:6px;
-          height: 6px;
-          border-radius: 100%;
-          position: absolute;
-          left:0px;
-          top:20px;
-          background-color:black;
         }
 
         .dark .article-extras .posts a::before {
@@ -404,7 +367,7 @@ img.in-article {
 }
 
 .single-article h4 {
-  margin: 1.5rem 0 0.5rem !important;
+  margin: $spacing-sm 0 $spacing-xs !important;
 }
 
 .single-article a {
@@ -423,8 +386,7 @@ img.in-article {
   flex-direction: row;
   gap: 2rem;
   width: 100%;
-  max-width: 1400px;
-  margin: 8rem auto;
+  padding: calc($spacing-xl + 2rem) $spacing-lg;
 }
 
     .general-main.white {
@@ -434,9 +396,7 @@ img.in-article {
     @media screen and (max-width: 1400px) {
       .container,
       .general-main {
-        padding:0 2rem;
-        width: 100%;
-        max-width: 1120px;
+        padding: calc($spacing-xl + 2rem) $spacing-lg;
       }
     }
 
@@ -444,14 +404,14 @@ img.in-article {
       .container,
       .general-main {
         flex-direction: column;
-        padding:0 2rem;
+        padding: calc($spacing-xl + 2rem) $spacing-lg;
       }
     }
 
     @media screen and (max-width: 768px) {
       .container,
       .general-main {
-        margin: 4rem auto;
+        padding: calc($spacing-lg + 2rem) $spacing-md;
       }
     }
 
@@ -492,7 +452,7 @@ img.in-article {
       max-width: 380px;
       position: -webkit-sticky;
       position: fixed;
-      top:120px;
+      top: calc($spacing-xl + 2rem);
     }
 
     @media screen and (max-width: 1000px) {
@@ -503,11 +463,6 @@ img.in-article {
         position: relative;
         top:0;
       }
-    }
-
-    .explanation h4,
-    .explanation p {
-      opacity: 0.8;
     }
 
     @media screen and (max-width: 1000px) {
