--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -8,7 +8,7 @@ $black: #0d0d24;
 $white: #F5F1F6;
 
 /* Fonts */
-$font-family-main: 'Roboto Condensed', sans-serif;
+$font-family-main: 'Archivo Black', sans-serif;
 $font-family-secondary: 'Roboto', sans-serif;
 $font-size-base: 1rem;
 $font-size-sm: 0.875rem;
