Adding a map to the homepage

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -11,11 +11,12 @@ $white: #F5F1F6;
 $font-family-main: 'Archivo Black', sans-serif;
 $font-family-secondary: 'Roboto', sans-serif;
 $font-size-base: 1rem;
+$font-size-xs: 0.675rem;
 $font-size-sm: 0.875rem;
 $font-size-md: 1.25rem;
 $font-size-lg: 1.5rem;
 $font-size-xl: 2rem;
-$font-size-xxl: 2.4dvw;
+$font-size-xxl: 2.2dvw;
 
 /* Border-radius */
 $br-xs: 0.15rem;
