Well, that was a giant headache

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -33,6 +33,11 @@ $spacing-lg: 4rem;
 $spacing-xl: 8rem;
 $spacing-xxl: 16rem;
 
+/* Positioning */
+$p-desktop: 1rem;
+$p-tablet: 0.75rem;
+$p-mobile: 0.5rem;
+
 /* Widths */
 $width-sm: 30rem;
 $width-md: 50rem;
