Sun and moon animation

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -17,6 +17,8 @@ $font-size-md: 1.25rem;
 $font-size-lg: 1.5rem;
 $font-size-xl: 2rem;
 $font-size-xxl: 2.2dvw;
+$font-size-max: 4dvw;
+$font-size-mega: 8dvw;
 
 /* Border-radius */
 $br-xs: 0.15rem;
