--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -8,7 +8,7 @@ $black: #0d0d24;
 $white: #F5F1F6;
 
 /* Fonts */
-$font-family-main: 'Archivo Black', sans-serif;
+$font-family-main: 'Inter', sans-serif;
 $font-family-secondary: 'Roboto', sans-serif;
 $font-size-base: 1rem;
 $font-size-xs: 0.675rem;
@@ -16,9 +16,11 @@ $font-size-sm: 0.875rem;
 $font-size-md: 1.25rem;
 $font-size-lg: 1.5rem;
 $font-size-xl: 2rem;
-$font-size-xxl: 2.2dvw;
-$font-size-max: 4dvw;
-$font-size-mega: 8dvw;
+$font-size-xxl: 3rem;
+$font-size-max: 5rem;
+$font-size-mega: 6rem;
+
+$multiplier: 1.314;
 
 /* Border-radius */
 $br-xs: 0.15rem;
