--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,4 @@
+
 @import 'variables';
 
 /* Reset */
@@ -37,6 +38,11 @@ h1 {
   font-weight:900;
   margin-bottom: 2rem;
   padding:0.5rem 0;
+
+  @media screen and (max-width: 1200px) {
+    font-size: $font-size-xxl;
+    line-height: $font-size-xxl * 2;
+  }
 }
 
 @keyframes fadeIn {
@@ -71,6 +77,11 @@ h4 {
  margin-bottom:1rem;
  font-weight:normal;
  line-height: $spacing-md;
+
+  @media screen and (max-width: 768px) {
+    font-size: $font-size-md;
+    line-height: $font-size-md;
+  }
 }
 
 h5 { 
@@ -265,25 +276,6 @@ input {
     .dark .content img {
       background-color: rgb(43, 11, 64);
     }
-
-// .single-article h1 {
-//   line-height: 2.8rem;
-//   font-size: 2.441rem; 
-// }
-
-// .single-article h1,
-// .single-article h2,
-// .single-article h3,
-// .single-article h4{
-//   margin-bottom: 1.5rem;
-//   letter-spacing: -0.5px;
-// }
-
-// .single-article h2,
-// .single-article h3,
-// .single-article h4 {
-//   margin-top: 4rem;
-// }
 
 .single-article p {
   line-height: 2.4rem;
