--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,7 @@ h1 {
 
   @media screen and (max-width: 1200px) {
     font-size: $font-size-xxl;
-    line-height: $font-size-xxl * 2;
+    line-height: $font-size-xxl;
   }
 }
 
