--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -10,17 +10,17 @@ $white: #F5F1F6;
 /* Fonts */
 $font-family-main: 'Inter', sans-serif;
 $font-family-secondary: 'Roboto', sans-serif;
-$font-size-base: 1rem;
-$font-size-xs: 0.675rem;
-$font-size-sm: 0.875rem;
-$font-size-md: 1.25rem;
-$font-size-lg: 1.5rem;
-$font-size-xl: 2rem;
-$font-size-xxl: 3rem;
+$font-size-base: 12px;
+$font-size-xs: 11px;
+$font-size-sm: 12px;
+$font-size-md: 16px;
+$font-size-lg: 20px;
+$font-size-xl: 25px;
+$font-size-xxl: 30px;
 $font-size-max: 50px;
 $font-size-mega: 100px;
 
-$multiplier: 1.314;
+$multiplier: 1.4;
 
 /* Border-radius */
 $br-xs: 0.15rem;
