Social proof stuff

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -21,6 +21,7 @@ $font-size-max: 50px;
 $font-size-mega: 100px;
 
 $multiplier: 1.4;
+$multiplier-sm: 1.14;
 
 /* Border-radius */
 $br-xs: 0.15rem;
