--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,9 +1,23 @@
 /* Colors */
-$blue: #2121ff;
-$blue-light: rgb(138, 138, 255);
+$blue: #1328E0;
+$blue-light: #7B87FA;
+$green: #12D93E;
+$green-light: #3AF795;
+$pink: #E013BF;
+$pink-light: #FDBCF0;
+$teal: #13BBE0;
+$teal-light: #90E3F5;
+$orange: #EDE175;
+$orange-light: #FDD7BC;
+$yellow: #F5EF5D;
+$yellow-light: #FDFABC;
+$purple: #CB41EE;
+$purple-light: #E9BBF5;
+
 $gray-dark: #3B3845;
 $gray-md: #9090a4;
 $gray-light: #c2c2e3;
+
 $black: #0d0d24;
 $white: #F5F1F6;
 
