Updating colors and typography

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,29 +1,48 @@
 /* Colors */
-$blue: #1328E0;
-$blue-light: #7B87FA;
-$green: #12D93E;
-$green-light: #3AF795;
-$pink: #E013BF;
-$pink-light: #FDBCF0;
-$teal: #13BBE0;
-$teal-light: #90E3F5;
-$orange: #EDE175;
-$orange-light: #FDD7BC;
-$yellow: #F5EF5D;
-$yellow-light: #FDFABC;
-$purple: #CB41EE;
-$purple-light: #E9BBF5;
+$black: #2F2E31;
+$black-dark: #1C1C1D;
+$black-light: #3D3C40;
 
-$gray-dark: #3B3845;
-$gray-md: #9090a4;
-$gray-light: #c2c2e3;
+$white: #FAF4EC;
+$white-dark: #F8F0E4;
+$white-light: #FCF7F2;
 
-$black: #0d0d24;
-$white: #F5F1F6;
+$blue: #6A7CBE;
+$blue-dark: #404AA4;
+$blue-light: #8AA1D2;
+
+$orange: #CAA466;
+$orange-dark: #B5803D;
+$orange-light: #DABF85;
+
+$green: #5B7D39;
+$green-dark: #374B22;
+$green-light: #76A34A;
+
+$purple: #A276B2;
+$purple-dark: #7D4793;
+$purple-light: #BE99C9;
+
+$red: #F29453;
+$red-dark: #ED6932;
+$red-light: #F6B46C;
+
+$mint: #C3D5AD;
+$mint-dark: #ABC48C;
+$mint-light: #D5E2C6;
+
+$gray: #DBD7E1;
+$gray-dark: #CDC7D5;
+$gray-light: #E6E3EA;
+
+$teal: #82A0CE;
+$teal-dark: #507ABA;
+$teal-light: #A7BDDD;
+
 
 /* Fonts */
-$font-family-main: 'Inter', sans-serif;
-$font-family-secondary: 'Roboto', sans-serif;
+$font-family-main: 'IBM Plex Mono', sans-serif;
+$font-family-secondary: 'Open Sans', sans-serif;
 $font-size-base: 12px;
 $font-size-xs: 11px;
 $font-size-sm: 12px;
