Button update to new style

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -42,7 +42,7 @@ $teal-light: #A7BDDD;
 
 /* Fonts */
 $font-family-main: 'IBM Plex Mono', sans-serif;
-$font-family-secondary: 'Open Sans', sans-serif;
+$font-family-secondary: 'Noto Sans', sans-serif;
 $font-size-base: 12px;
 $font-size-xs: 11px;
 $font-size-sm: 12px;
