--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,10 +16,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: $font-family-main, sans-serif;
-  background-image: url('/textures/texture-3-bg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 /* Typography */
@@ -60,8 +56,8 @@ h1 {
 }
 
 h2 { 
-  font-size: $font-size-max;
-  line-height: $font-size-max * $multiplier-sm; 
+  font-size: $font-size-xxl;
+  line-height: $font-size-xxl * $multiplier-sm; 
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:500;
@@ -171,16 +167,43 @@ body.light {
   color: $black;
   background-color: $white;
   overflow-x: hidden;
+
+  &::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    height:100vh;
+    background-image: url('/textures/texture-3-bg.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
 
 body.dark {
   background-color: $black;
   color: $white;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-  overflow-x: hidden;
+
+  &::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    height:100vh;
+    background-image: url('/textures/texture-3-bg-dark.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
 
 /* Standard elements */
