--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,11 +39,16 @@ h1 {
   margin-top: 0;
   margin-bottom: 2rem;
   padding:0.5rem 0;
+  text-shadow: 3px 4px 0 darken($white, 10%);
 
   @media screen and (max-width: 1200px) {
     font-size: $font-size-max;
     line-height: $font-size-max;
   }
+}
+
+.dark h1 {
+  text-shadow: 3px 4px 0 darken($black-light, 10%);
 }
 
 @keyframes fadeIn {
@@ -61,11 +66,16 @@ h2 {
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:500;
+  text-shadow: 3px 4px 0 darken($white, 10%);
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-xxl;
     line-height: $font-size-xxl * $multiplier;
   }
+}
+
+.dark h2 {
+  text-shadow: 3px 4px 0 darken($black-light, 10%);
 }
 
 h3 { 
@@ -74,11 +84,16 @@ h3 {
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:500;
+  text-shadow: 3px 4px 0 darken($white, 10%);
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-xl;
     line-height: $font-size-xl * $multiplier;
   }
+}
+
+.dark h3 {
+  text-shadow: 3px 4px 0 darken($black-light, 10%);
 }
 
 h4 { 
