--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,6 +45,10 @@ h1 {
     font-size: $font-size-max;
     line-height: $font-size-max;
   }
+
+  @media screen and (max-width: 1000px) {
+    text-shadow: 2px 2px 0 darken($white, 10%);
+  }
 }
 
 .dark h1 {
@@ -69,8 +73,9 @@ h2 {
   text-shadow: 3px 4px 0 darken($white, 10%);
 
   @media screen and (max-width: 1000px) {
-    font-size: $font-size-xxl;
-    line-height: $font-size-xxl * $multiplier;
+    font-size: $font-size-xl;
+    line-height: $font-size-xl * $multiplier;
+    text-shadow: 2px 2px 0 darken($white, 10%);
   }
 
   @media screen and (max-width: 768px) {
@@ -83,20 +88,20 @@ h2 {
 }
 
 .dark h2 {
-  text-shadow: 3px 4px 0 darken($black-light, 10%);
+  text-shadow: 2px 2px 0 darken($black-light, 10%);
 }
 
 h3 { 
-  font-size: $font-size-xxl; 
-  line-height: $font-size-xxl * $multiplier; 
+  font-size: $font-size-xl; 
+  line-height: $font-size-xl * $multiplier; 
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:500;
   text-shadow: 3px 4px 0 darken($white, 10%);
 
   @media screen and (max-width: 1000px) {
-    font-size: $font-size-xl;
-    line-height: $font-size-xl * $multiplier;
+    font-size: $font-size-lg;
+    line-height: $font-size-lg * $multiplier;
   }
 
   @media screen and (max-width: 768px) {
@@ -113,8 +118,8 @@ h3 {
 }
 
 h4 { 
-  font-size: $font-size-lg; 
-  line-height: $font-size-lg * $multiplier; 
+  font-size: $font-size-md; 
+  line-height: $font-size-md * $multiplier; 
   font-family: $font-family-secondary, sans-serif;
   margin-bottom:1rem;
   font-weight:500;
@@ -153,6 +158,11 @@ li {
   font-family: $font-family-secondary, sans-serif;
   line-height: $spacing-md;
   margin-bottom: 1rem;
+
+  @media screen and (max-width: 1000px) {
+    font-size: $font-size-sm;
+    line-height: $font-size-sm * $multiplier;
+  }
 
 }
 
